@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n3.c	1.145 (gritter) 8/24/06
+ * Sccsid @(#)n3.c	1.146 (gritter) 9/3/06
  */
 
 /*
@@ -208,20 +208,20 @@ growcontab(void)
 void *
 growblist(void)
 {
+	static tchar	*_corebuf;
 	int	inc = 512;
 	tchar	*ocb;
 
-	if (nblist+inc > XBLIST)
-		return NULL;
 	if ((blist = realloc(blist, (nblist+inc) * sizeof *blist)) == NULL)
 		return NULL;
 	memset(&blist[nblist], 0, inc * sizeof *blist);
-	ocb = corebuf;
-	if ((corebuf = realloc(corebuf, (ENV_BLK+nblist+inc+1)
-					* BLK * sizeof *corebuf)) == NULL)
+	ocb = _corebuf;
+	if ((_corebuf = realloc(_corebuf,
+	    ((ENV_BLK+nblist+inc+1) * BLK + 1) * sizeof *_corebuf)) == NULL)
 		return NULL;
 	if (ocb == NULL)
-		memset(corebuf, 0, (ENV_BLK+1) * BLK * sizeof *corebuf);
+		memset(_corebuf, 0, ((ENV_BLK+1) * BLK + 1) * sizeof *_corebuf);
+	corebuf = &_corebuf[1];
 	memset(&corebuf[(ENV_BLK+nblist+1) * BLK], 0,
 			inc * BLK * sizeof *corebuf);
 	if (wbuf)
@@ -758,7 +758,7 @@ rbf (void)		/*return next char from blist[] block*/
 	register tchar i;
 	register filep j, p;
 
-	if (ip == XBLIST*BLK) {		/* for rdtty */
+	if (ip == -1) {		/* for rdtty */
 		if (j = rdtty())
 			return(j);
 		else
